--- a/css/login/passwordJoin.css
+++ b/css/login/passwordJoin.css
@@ -38,13 +38,19 @@ hr{
 }
 
 
-.Passwordset .pass .passSet{
+.Passwordset .pass .passSet1{
    
    width: 440px;
    height: 40px;
    border-radius:4px;
 }
 
+.Passwordset .pass .passSet2{
+   
+    width: 440px;
+    height: 40px;
+    border-radius:4px;
+ }
 
 .Passwordset .pass .btn{
     position: absolute;
