--- a/css/estimate/estimateCal.css
+++ b/css/estimate/estimateCal.css
@@ -1,28 +1,28 @@
-@charset "utf-8";
-
-body {
-    font-family: Arial, sans-serif;
-}
-.container {
-    padding: 150px;
-}
-.header {
-    background-image: url(img/2026.png);
-    padding: 30px 0px 30px 10px;
+.banner {
+    background-image: url(../../assets/images/estimateBanner.png);
+    height: 150px;
+    padding: 45px 40px;
     text-align: left;
 }
-.header h1 {
-    font-size: 1.5em;
+.banner h1 {
+    font-size: 20px;
+    font-weight: bold;
+    color: #000;
+    padding-bottom: 10px;
 }
-.outer-header {
+.outer-par {
     padding: 10px;
     text-align: left;
+    color: #000;
 }
 .tabs {
     display: flex;
     justify-content:center;
     margin: 10px 0;
+    padding: 10px 180px; 
+    border-top: 2px solid #ccc;
     border-bottom: 2px solid #ccc;
+    justify-content: space-between;
 }
 .tab {
     padding: 10px 20px;
