chore : 깃 머지 중 커밋

--- a/css/login/law.css
+++ b/css/login/law.css
@@ -32,6 +32,8 @@
     overflow-y: scroll;
 }
 
+
+/*
 .box input[type="checkbox"]
 {
     display: none;
@@ -73,3 +75,4 @@
     font-size: 18px;
     vertical-align: middle;
 }
+*/
