--- a/css/login/agreement.css
+++ b/css/login/agreement.css
@@ -48,6 +48,7 @@ hr{
       left: 0;
       top:0;
       background-color: white;
+      border: 1px solid #959da8;
   
 }
 
@@ -57,6 +58,7 @@ hr{
       font-weight: 1px;
       background-color: white;
       color:blue;
+      
 }
 
 /*모두 동의*/
