--- a/css/admin/customerList.css
+++ b/css/admin/customerList.css
@@ -9,7 +9,7 @@
 
 .admin-content {
     width: 960px;
-    min-height: 1000px;
+    min-height: 500px;
 }
 
 /* 1. 상단 요약 섹션 */
@@ -60,26 +60,60 @@
     margin-left: 5px;
 }
 
-/* 1. 고객 예약 관리 */
-.today-visit {
+/* 2. 고객 예약 관리 */
+
+.customer-management {
     margin-top: 50px;
 }
 
-.today-visit h2 {
+.customer-management h2 {
     font-size: 24px;
+    margin-bottom: 5px;
 }
 
-.today-visit-header {
-    display: flex;
-    justify-content: space-between;
-    margin: 10px 0 0px 0;
-    padding-bottom: 15px;
+.customer-management-info {
     border-bottom: 2px solid #000000;
+    padding-bottom: 10px;
 }
 
-.today-visit-header span {
+/* 2-1. 고객 검색 */
+.customer-search {
+    display: flex;
+    justify-content: space-around;
+    margin: 23px 0;
+}
+
+.calendar,
+.name-phone {
+    width: 320px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    display: flex;
+    border-radius: 5px;
+}
+
+.calendar {
+    border: 1px solid #ca1a5a;
+    background-color: rgba(255, 203, 222, 0.19);
     color: #ca1a5a;
 }
+
+.name-phone {
+    border: 1px solid #858585;
+    background-color: white;
+    color: #858585;
+}
+
+.calendar img,
+.name-phone img {
+    width: 28px;
+    margin-left: 10px;
+}
+
+/* 2-2. 방문 고객 리스트  */
 
 .visit-detail-container {
     min-height: 700px;
@@ -100,19 +134,42 @@
 }
 
 .visit-time {
-    width: 100px;
+    width: 90px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.visit-time div {
+.visit-true {
+    width: 65px;
+    text-align: center;
+    padding: 4px 10px;
+    border-radius: 5px;
+    margin-top: 5px;
+    background-color: #ca1a5a;
+    color: white;
+}
+
+.visit-false {
     border: 1px solid #000000;
     width: 65px;
     text-align: center;
     padding: 4px 10px;
     border-radius: 5px;
+    margin-top: 3px;
 }
 
 .visit-customer-info {
     width: 300px;
+    margin-left: 20px;
+}
+
+.payment-email-true {
+    color: #ca1a5a;
+}
+
+.payment-email-false {
+    color: #3b3b3b;
 }
 
 .wedding-info {
