--- a/css/admin/customerDetail.css
+++ b/css/admin/customerDetail.css
@@ -9,7 +9,7 @@
 
 .admin-content {
     width: 960px;
-    min-height: 500px;
+    /* min-height: 500px; */
 }
 
 /* 1. 상단 요약 섹션 */
@@ -69,9 +69,13 @@
     padding-bottom: 10px;
 }
 
+.user-info-container {
+    align-content: center;
+}
+
 .user-info-inner {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 5px;
@@ -100,24 +104,87 @@
     font-size: 14px;
 }
 
-/* 3. 웨딩홀 방문 예약 일정 */
+/* 3. 웨딩홀 방문 일정 */
+.visit-schedule {
+    margin-top: 30px;
+}
+
+.visit-details {
+    border: 1px solid #eeeeee;
+    border-radius: 5px;
+    box-shadow: 5px 5px 7px #eeeeee;
+    padding: 20px 35px;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.visit-time {
+    width: 120px;
+    display: flex;
+    flex-direction: column;
+}
+
+.visit-true {
+    width: 90px;
+    text-align: center;
+    padding: 4px 10px;
+    border-radius: 5px;
+    margin-top: 5px;
+    background-color: #ca1a5a;
+    color: white;
+}
+
+.visit-customer-info {
+    width: 300px;
+}
+
+.payment-email-true {
+    color: #ca1a5a;
+}
+
+.wedding-info {
+    flex-grow: 1;
+}
+
+.visit-customer-info div,
+.wedding-info div {
+    margin-bottom: 7px;
+}
+
+.visit-customer-info span:nth-of-type(1),
+.wedding-info span:nth-of-type(1) {
+    margin-right: 22px;
+}
+.message {
+    display: flex;
+    justify-content: space-between;
+}
+.message-summary {
+    width: 310px;
+    background-color: #eeeeee;
+    padding: 10px 15px;
+    border-radius: 5px;
+    font-size: 14px;
+    word-break: keep-all;
+}
 
 /* 4. 결제 현황 */
-
-.payment-status h2 {
-    margin-bottom: 10px;
-}
-
-.payment-status p {
-    font-size: 14px;
-    color: #333;
-}
-
 .payment-header {
     display: flex;
     justify-content: space-between;
     align-items: end;
     margin-bottom: 20px;
+    margin-top: 60px;
+}
+
+.payment-header h2 {
+    margin-bottom: 10px;
+}
+
+.payment-header p {
+    font-size: 14px;
+    color: #333;
 }
 
 .quote-button {
@@ -170,6 +237,7 @@
     height: 33px;
     text-align: center;
     padding: 4px 10px;
+    margin-top: 5px;
 }
 
 .payment-table {
@@ -192,6 +260,7 @@ table th {
 .wedding h2 {
     font-size: 24px;
     margin-bottom: 10px;
+    margin-top: 60px;
 }
 
 .wedding-container {
@@ -216,4 +285,15 @@ table th {
     height: 33px;
     text-align: center;
     padding: 4px 10px;
+}
+
+.wedding-info .date,
+.wedding-info .time {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.wedding-info .date span,
+.wedding-info .time span {
+    margin-left: 15px;
 }
