--- a/css/admin/quoteModal.css
+++ b/css/admin/quoteModal.css
@@ -1,24 +1,20 @@
 .modal {
-    display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 100000;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
-    padding-top: 60px;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .modal-content {
     background-color: #fefefe;
-    margin: 5% auto;
+    margin: 2% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 100%;
-    max-width: 600px;
+    max-width: 650px;
 }
 
 .close {
@@ -31,22 +27,24 @@
 .close:hover,
 .close:focus {
     color: black;
-    text-decoration: none;
     cursor: pointer;
 }
 
 /* 견적서 css */
 .order-container img {
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
 }
 
 .cost-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 10px 0;
 }
 
 .amount {
     font-size: 20px;
     color: #ca1a5a;
+    font-weight: bold;
 }
