--- a/css/reservation/reservationCategory.css
+++ b/css/reservation/reservationCategory.css
@@ -82,15 +82,20 @@
     font-size: 22px;
     font-weight: bold;
     padding-left: 20px;
+    margin: 0;
+    margin-right: 5px;
+
 }
 
-.guide-addition {
-    font-size: 15px;
+.guide-explain {
+    font-size: 16px;
     font-weight: normal;
     letter-spacing: -0.5px;
-    padding-top: 5px;
-    padding-left: 13px;
+    padding-top: 3px;
+    padding-left: 11px;
+
 }
+
 
 /* 카테고리 리스트 */
 .category-all {
@@ -104,8 +109,8 @@
 .category {
    /* width: 25vw;
    height: 45vh; */
-   width: 400px;
-   height: 450px;
+   width: 450px;
+   height: 480px;
    margin: 0;
    position: relative;
 }
@@ -141,22 +146,21 @@
 
 /* 다음 단계 버튼 */
 .btn {
+    display: flex;
     text-align: center;
-    padding-top: 6px;
-    margin-right: 124px;
-    margin-bottom: 20px;
+    margin-right: 75px;
     border-radius: 5px;
-    float: right;
+    justify-content: flex-end;
 }
 
 .btn-nxt {
     font-size: 13px;
     font-weight: bold;
-    padding: 10px 110px;
+    padding: 10px 120px;
     color: #fff;
     background-color: #000;
     border-radius: 5px;
-    justify-content: flex-end;
+    cursor: pointer;
 }
 
 .btn-nxt:hover {
