--- a/css/visitReservation/visitReserveInfo.css
+++ b/css/visitReservation/visitReserveInfo.css
@@ -173,13 +173,12 @@
     display: flex;
     flex-direction: column;
     /* justify-content: space-between; */
-    margin: 20px 20px;
-   /*  margin-left: 60px; */
+    margin: 20px 15px;
 }
 
 .reserve-guide {
-    margin-top: 70px;
-    padding: 24px;
+    margin-top: 85px;
+    padding: 25px;
     padding-left: 30px;
     border: 1px solid #CA1A5A;
     border-radius: 8px;   
@@ -188,6 +187,7 @@
 .reserve-guide h2 {
     font-size: 17px;
     color: #CA1A5A;
+    margin: 0;
 }
 
 .guide {
@@ -280,6 +280,7 @@
     padding: 10px 90px;
     border: 1px solid #000;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .btn-pre:hover {
@@ -293,6 +294,7 @@
     border-radius: 5px;
     color: #fff;
     background-color: #000;
+    cursor: pointer;
 }
 
 .btn-nxt:hover {
