--- a/css/estimate/estimateCal.css
+++ b/css/estimate/estimateCal.css
@@ -1,14 +1,15 @@
 .banner {
     background-image: url(../../assets/images/estimateBanner.png);
-    height: 150px;
-    padding: 45px 40px;
+    height: 170px;
+    padding: 53px 45px;
     text-align: left;
+    font-size: 15px;
 }
-.banner h1 {
-    font-size: 20px;
+.banner .bold {
+    font-size: 22px;
     font-weight: bold;
     color: #000;
-    padding-bottom: 10px;
+    padding-bottom: 15px;
 }
 .outer-par {
     padding: 10px;
