--- a/css/reservation/reservationSelectOptions.css
+++ b/css/reservation/reservationSelectOptions.css
@@ -111,14 +111,13 @@
     display: flex;
     width: 1050px;
     background-color: #eee;
-    /* background-color: rgba(202, 26, 90, 0.1); */
-    padding: 20px;
+    /* padding: 20px; */
 }
 
 .company-container img {
-    width: 230px;
-    height: 210px;
-    margin: 20px;
+    width: 280px;
+    height: 270px;
+    padding: 20px;
 }
 
 .company-info {
@@ -126,22 +125,22 @@
 }
 
 .company-info h3 {
-    width: 730px;
+    width: 720px;
     font-size: 17px;
     font-weight: 600;
     padding-bottom: 8px;
-    margin: 0;
+    margin: 5px 0;
     border-bottom: 1px solid #8f8f8f;
 }
 
 .basic-options {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    margin: 15px 10px;
+    margin: 17px 10px;
 }
 
 .basic-option {
-    margin-bottom: 20px;
+    margin-bottom: 24px;
 }
 
 .basic-option p {
@@ -166,9 +165,8 @@
 }
 
 .option-card {
+    position: relative;
     display: flex;
-    width: 480px;
-    height: 150px;
     margin: 0 10px;
     border: 1px solid #ccc;
     border-radius: 2px;
@@ -179,18 +177,19 @@
 }
 
 .option-img input {
-    margin: 9px 0px 115px 10px;
+    position: absolute;
+    margin: 0;
+    zoom: 1.8;
 }
 
 .option-img img{
-    width: 130px;
-    height: 118px;
-    margin: 15px;
+    width: 200px;
+    height: 100%;
 }
 
 .option-info {
     width: 100%;
-    padding: 17px 20px;
+    padding: 20px 30px;
 }
 
 .option-name {
@@ -206,8 +205,10 @@
 }
 
 .option-price {
-    font-size: 14px;
-    margin-top: 45px;
+    font-size: 15px;
+    font-weight: 600;
+    margin-top: 55px;
+    margin-bottom: 0;
 }
 
 input {
@@ -216,7 +217,6 @@ input {
 
 /* 선택 목록 */
 .select-list {
-    margin: 30px 0;
     padding: 10px; 
     background-color: #fff;
     position: sticky;
@@ -267,13 +267,14 @@ input {
     display: grid;
     grid-template-rows: repeat(2, 70px);
     width: 100%;
-    padding: 20px 10px;
+    padding-left: 20px;
 }
 
 .select-option {
     display: grid;
-    grid-template-columns: 100px 600px 150px;
+    grid-template-columns: 90px 700px 150px;
     border-bottom: 1px solid #757575;
+    width: 870px;
     padding: 10px 0;
 }
 
@@ -288,8 +289,7 @@ input {
 }
 
 .select-option-info {
-    /* width: 100%; */
-    padding: 5px 30px;
+    padding-top: 5px;
 }
 
 .select-option-info h6 {
@@ -305,6 +305,12 @@ input {
 .select-options-price {
     margin: 0px;
 }
+
+.option-price-div {
+    display: flex;
+    align-items: center;
+}
+
 
 /* 다음 단계 버튼 */
 .btn {
