--- a/css/mypage/myPayment.css
+++ b/css/mypage/myPayment.css
@@ -7,14 +7,45 @@ body {
   scroll-behavior: smooth;
   -ms-overflow-style: none;
 }
-/* 1.폴더 위치 */
-.myPayment-location {
+/* 0. myP{ayment-body-header */
+.body-header {
+  background-color: black;
+  width: 960px;
+  height: 100px;
+  color: white;
+}
+.body-header div {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  text-align: center;
 }
-.myPayment-location :nth-last-of-type(1) {
-  color: #ca1a5a;
+.body-header div p,
+h3 {
+  margin: 32px;
+}
+.body-header div h3 {
+  width: 500px;
+}
+.v-line {
+  border-left: 1px solid white;
+  height: 60px;
+  margin: 10px;
+  margin-left: 20px;
+  align-self: center;
+}
+
+/* 1. myPage-sidebar */
+.myPage-container {
+  display: flex;
+  justify-content: space-between;
+}
+.myPage-sidebar {
+  width: 140px;
+}
+.myPage-content {
+  width: 960px;
+  min-height: 1000px;
 }
 /* 2.헤더 설명 */
 .myPayment-header h3 {
