--- a/css/login/IDJoin.css
+++ b/css/login/IDJoin.css
@@ -8,9 +8,19 @@
     width: 460px;
     background-color: #fff;
     border-radius: 5px;
-    top: 55%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -45%);
+    box-shadow: 5px 5px 7px #c8c8c8c8;
+
+}
+
+
+
+td{
+    border:1px solid black;
+    width: 200px;
+    height: 5px;
 }
 
 h1{
@@ -29,6 +39,8 @@ hr{
     height: 50px;
     border: 1px solid gray;
     border-radius:1px;
+    box-shadow: 5px 5px 7px #eeeeee;
+    padding-left: 10px;
 }
 
 .idset input:focus{
