--- a/css/login/clearmessage.css
+++ b/css/login/clearmessage.css
@@ -9,18 +9,21 @@
     background-color: #fff;
     border-radius: 5px;
     top: 55%;
-    left: 40%;
+    left: 45%;
     transform: translate(-50%, -45%);
+   
 }
 
 .box{
-    background-color : white;
+    background-color : #e4a2b9;;
     width: 700px;
     height: 300px;
     border-radius: 20px;
     position: relative;
     animation: fadeInDown 1s;
-    border: 1px solid #E93374;
+    color : #fff;
+    border: 1px solid black;
+    box-shadow: 5px 5px 7px #c8c8c8c8;
    
 }
 
@@ -49,12 +52,13 @@
     width: 150px;
     height: 70px;
     
-    border: 2px solid #E93374;
-    
+    color: white;
+    background-color: black;
     position: fixed;
     right: 80px;
-    border-radius: 15px;
+    border-radius: 10px;
     font-size: 12px;
+    cursor: pointer;
 }
 h2{
     text-align: center;
