--- a/css/login/law.css
+++ b/css/login/law.css
@@ -6,15 +6,17 @@
     width: 460px;
     background-color: #fff;
     border-radius: 5px;
-    top: 55%;
-    left: 25%;
+    top: 40%;
+    left: 35%;
     transform: translate(-50%, -45%);
+   
 }
 
 .box{
-    width: 300%;
+    width: 673px;
     height: 30px;
     background-color: #F776A5;
+    
     
 }
 
@@ -26,10 +28,11 @@
 }
 
 .agree{
-    width: 300%;
+    width: 150%;
     height: 600px;
     border: 1px solid black;
     overflow-y: scroll;
+    box-shadow: 5px 5px 7px #c8c8c8c8;
 }
 
 
