--- a/css/login/passwordJoin.css
+++ b/css/login/passwordJoin.css
@@ -8,14 +8,21 @@
     width: 500px;
     background-color: #fff;
     border-radius: 5px;
-    top: 55%;
+    top: 25%;
     left: 50%;
     transform: translate(-50%, -45%);
+    box-shadow: 5px 5px 7px #c8c8c8c8;
 }
 
 h1{
     font-size: 40px;
     text-align: center;
+}
+
+td{
+    border:1px solid black;
+    width: 200px;
+    height: 5px;
 }
 
 hr{
@@ -38,14 +45,14 @@ hr{
 }
 
 
-.Passwordset .pass .passSet1{
+.Passwordset .pass #passSet1{
    
    width: 440px;
    height: 40px;
    border-radius:4px;
 }
 
-.Passwordset .pass .passSet2{
+.Passwordset .pass #passSet2{
    
     width: 440px;
     height: 40px;
@@ -114,4 +121,9 @@ hr{
     border: none;
     color:white;
    
+}
+
+input{
+    padding-left: 10px;
+    box-shadow: 5px 5px 7px #eeeeee;
 }
